testdata/parser/negative/29.txt
Parse error at 29.pdl:5:25: Unassignable expression
    ++(x[0..5][2 - x[0]].length); // not assignable
                        ^
